--- a/challenge2_bot/Main.xaml
+++ b/challenge2_bot/Main.xaml
@@ -63,18 +63,14 @@
       <AssemblyReference>System.ValueTuple</AssemblyReference>
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
       <AssemblyReference>NPOI</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
       <AssemblyReference>UiPath.Excel.Activities.Design</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence sap2010:Annotation.AnnotationText="Builds and exports dataset with required fields for challenge 2&#xA;" sap:VirtualizedContainerService.HintSize="551.333333333333,1641.33333333333" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Int32" Name="in_numEntries" />
-      <Variable x:TypeArguments="x:Int32" Name="rowsOfData">
-        <Variable.Default>
-          <Literal x:TypeArguments="x:Int32" />
-        </Variable.Default>
-      </Variable>
+      <Variable x:TypeArguments="x:Int32" Default="0" Name="rowsOfData" />
       <Variable x:TypeArguments="sd:DataTable" Name="dt_invoices" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
@@ -116,7 +112,7 @@
         </Catch>
       </TryCatch.Catches>
       <TryCatch.Finally>
-        <ui:BuildDataTable DataTable="[dt_invoices]" DisplayName="Build Data Table" sap:VirtualizedContainerService.HintSize="334,58.6666666666667" sap2010:WorkflowViewState.IdRef="BuildDataTable_1" TableInfo="&lt;NewDataSet&gt;&#xD;&#xA;  &lt;xs:schema id=&quot;NewDataSet&quot; xmlns=&quot;&quot; xmlns:xs=&quot;http://www.w3.org/2001/XMLSchema&quot; xmlns:msdata=&quot;urn:schemas-microsoft-com:xml-msdata&quot;&gt;&#xD;&#xA;    &lt;xs:element name=&quot;NewDataSet&quot; msdata:IsDataSet=&quot;true&quot; msdata:MainDataTable=&quot;TableName&quot; msdata:UseCurrentLocale=&quot;true&quot;&gt;&#xD;&#xA;      &lt;xs:complexType&gt;&#xD;&#xA;        &lt;xs:choice minOccurs=&quot;0&quot; maxOccurs=&quot;unbounded&quot;&gt;&#xD;&#xA;          &lt;xs:element name=&quot;TableName&quot;&gt;&#xD;&#xA;            &lt;xs:complexType&gt;&#xD;&#xA;              &lt;xs:sequence&gt;&#xD;&#xA;                &lt;xs:element name=&quot;Invoice_x0020_Number&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xD;&#xA;                &lt;xs:element name=&quot;Invoice_x0020_Date&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xD;&#xA;                &lt;xs:element name=&quot;Invoice_x0020_Total&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xD;&#xA;                &lt;xs:element name=&quot;Quantity&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xD;&#xA;                &lt;xs:element name=&quot;Description&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xD;&#xA;                &lt;xs:element name=&quot;Total_x0020_Price&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xD;&#xA;              &lt;/xs:sequence&gt;&#xD;&#xA;            &lt;/xs:complexType&gt;&#xD;&#xA;          &lt;/xs:element&gt;&#xD;&#xA;        &lt;/xs:choice&gt;&#xD;&#xA;      &lt;/xs:complexType&gt;&#xD;&#xA;    &lt;/xs:element&gt;&#xD;&#xA;  &lt;/xs:schema&gt;&#xD;&#xA;&lt;/NewDataSet&gt;" />
+        <ui:BuildDataTable DataTable="[dt_invoices]" DisplayName="Build Data Table" sap:VirtualizedContainerService.HintSize="334,58.6666666666667" sap2010:WorkflowViewState.IdRef="BuildDataTable_1" TableInfo="&lt;NewDataSet&gt;&#xA;  &lt;xs:schema id=&quot;NewDataSet&quot; xmlns=&quot;&quot; xmlns:xs=&quot;http://www.w3.org/2001/XMLSchema&quot; xmlns:msdata=&quot;urn:schemas-microsoft-com:xml-msdata&quot;&gt;&#xA;    &lt;xs:element name=&quot;NewDataSet&quot; msdata:IsDataSet=&quot;true&quot; msdata:MainDataTable=&quot;TableName&quot; msdata:UseCurrentLocale=&quot;true&quot;&gt;&#xA;      &lt;xs:complexType&gt;&#xA;        &lt;xs:choice minOccurs=&quot;0&quot; maxOccurs=&quot;unbounded&quot;&gt;&#xA;          &lt;xs:element name=&quot;TableName&quot;&gt;&#xA;            &lt;xs:complexType&gt;&#xA;              &lt;xs:sequence&gt;&#xA;                &lt;xs:element name=&quot;Invoice_x0020_Number&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xA;                &lt;xs:element name=&quot;Invoice_x0020_Date&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xA;                &lt;xs:element name=&quot;Invoice_x0020_Total&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xA;                &lt;xs:element name=&quot;Quantity&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xA;                &lt;xs:element name=&quot;Description&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xA;                &lt;xs:element name=&quot;Total_x0020_Price&quot; msdata:Caption=&quot;&quot; type=&quot;xs:string&quot; minOccurs=&quot;0&quot; /&gt;&#xA;              &lt;/xs:sequence&gt;&#xA;            &lt;/xs:complexType&gt;&#xA;          &lt;/xs:element&gt;&#xA;        &lt;/xs:choice&gt;&#xA;      &lt;/xs:complexType&gt;&#xA;    &lt;/xs:element&gt;&#xA;  &lt;/xs:schema&gt;&#xA;&lt;/NewDataSet&gt;" />
       </TryCatch.Finally>
     </TryCatch>
     <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="509.333333333333,244.666666666667" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Enter how many invoices you'd like in the dataset: " Title="Number of Invoices in Dataset">
@@ -124,25 +120,17 @@
         <OutArgument x:TypeArguments="x:Int32">[in_numEntries]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <ui:InterruptibleWhile CurrentIndex="[rowsOfData]" DisplayName="While" sap:VirtualizedContainerService.HintSize="509.333333333333,846.666666666667" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
+    <ui:InterruptibleWhile Condition="[rowsOfData &lt; in_numEntries]" CurrentIndex="[rowsOfData]" DisplayName="While" sap:VirtualizedContainerService.HintSize="509.333333333333,846.666666666667" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
       <ui:InterruptibleWhile.Body>
         <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="472.666666666667,677.333333333333" sap2010:WorkflowViewState.IdRef="Sequence_2">
           <Sequence.Variables>
             <Variable x:TypeArguments="x:Int32" Name="invoiceNumber" />
-            <Variable x:TypeArguments="s:DateTime" Name="invoiceDate">
-              <Variable.Default>
-                <mva:VisualBasicValue x:TypeArguments="s:DateTime" ExpressionText="now" />
-              </Variable.Default>
-            </Variable>
+            <Variable x:TypeArguments="s:DateTime" Default="[now]" Name="invoiceDate" />
             <Variable x:TypeArguments="x:Int32" Name="quantity" />
             <Variable x:TypeArguments="x:Double" Name="pricePerItem" />
             <Variable x:TypeArguments="x:Int32" Name="invoiceTotal" />
             <Variable x:TypeArguments="x:Double" Name="totalPrice" />
-            <Variable x:TypeArguments="s:String[]" Name="descriptionList">
-              <Variable.Default>
-                <mva:VisualBasicValue x:TypeArguments="s:String[]" ExpressionText="{}{&quot;Service&quot;,&quot;Consultation&quot;, &quot;Development&quot;, &quot;Labor&quot;, &quot;Session&quot;, &quot;Fee&quot;, &quot;Event&quot;}" />
-              </Variable.Default>
-            </Variable>
+            <Variable x:TypeArguments="s:String[]" Default="[{&quot;Service&quot;,&quot;Consultation&quot;, &quot;Development&quot;, &quot;Labor&quot;, &quot;Session&quot;, &quot;Fee&quot;, &quot;Event&quot;}]" Name="descriptionList" />
           </Sequence.Variables>
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -203,13 +191,10 @@
               </scg:List>
             </ui:MultipleAssign.AssignOperations>
           </ui:MultipleAssign>
-          <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="430.666666666667,62.6666666666667" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[String.Format(&quot;quant: {0}&quot;, quantity) + &#xD;&#xA;System.Environment.NewLine +&#xD;&#xA;String.Format(&quot;invTot: {0}&quot;, invoiceTotal)]" />
-          <ui:AddDataRow DataRow="{x:Null}" ArrayRow="[{(&quot;INV-&quot; + invoiceNumber.ToString), invoiceDate.ToString(&quot;MM/dd/yyyy&quot;), invoiceTotal.ToString, quantity.ToString, descriptionList(new Random(DateTime.Now.Millisecond).Next(descriptionList.Length)), String.Format(&quot;${0:0.00}&quot;, totalPrice)}]" DataTable="[dt_invoices]" DisplayName="Add Data Row" sap:VirtualizedContainerService.HintSize="430.666666666667,190" sap2010:WorkflowViewState.IdRef="AddDataRow_3" />
+          <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="430.666666666667,62.6666666666667" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[String.Format(&quot;quant: {0}&quot;, quantity) + &#xA;System.Environment.NewLine +&#xA;String.Format(&quot;invTot: {0}&quot;, invoiceTotal)]" />
+          <ui:AddDataRow DataRow="{x:Null}" ArrayRow="[{(&quot;INV-&quot; + invoiceNumber.ToString), invoiceDate.ToString(&quot;MM/dd/yyyy&quot;), invoiceTotal.ToString, quantity.ToString, descriptionList(new Random(DateTime.Now.Millisecond).Next(descriptionList.Length)), String.Format(&quot;${0:0}&quot;, Math.Floor(totalPrice))}]" DataTable="[dt_invoices]" DisplayName="Add Data Row" sap:VirtualizedContainerService.HintSize="430.666666666667,190" sap2010:WorkflowViewState.IdRef="AddDataRow_3" />
         </Sequence>
       </ui:InterruptibleWhile.Body>
-      <ui:InterruptibleWhile.Condition>
-        <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="rowsOfData &lt; in_numEntries" />
-      </ui:InterruptibleWhile.Condition>
     </ui:InterruptibleWhile>
     <ui:WriteRange StartingCell="{x:Null}" AddHeaders="True" DataTable="[dt_invoices]" DisplayName="Write Range" sap:VirtualizedContainerService.HintSize="509.333333333333,114.666666666667" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="Sheet1" WorkbookPath="datasets/dataset2.xlsx" />
     <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="509.333333333333,85.3333333333333" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[String.Format(&quot;Dataset Build Complete. Total Entries: {0}&quot;, rowsOfData)]" />
